--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Decor - Make your home look good</title>
+    <title>Home Decor NISHA RAUT - Make your home look good</title>
 
     <!-- CSS Link  -->
     <link rel="stylesheet" href="style.css" />
