--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         </label>
         <img src="home-images/Interior-logo.png" alt="logo" />
         <ul>
+                    <li><a href="#">Nisha- development</a></li>
+
           <li><a href="#">About Us</a></li>
           <li><a href="#">Living Room</a></li>
           <li><a href="#">Kitchen</a></li>
