--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </label>
         <img src="home-images/Interior-logo.png" alt="logo" />
         <ul>
-                    <li><a href="#">Nisha</a></li>
+                    <li><a href="#">Nisha-new-changes/a></li>
 
-          <li><a href="#">About Us</a></li>
+          <li><a href="#">About Us- Production </a></li>
           <li><a href="#">Living Room</a></li>
           <li><a href="#">Kitchen</a></li>
           <li><a href="#">Outdoors</a></li>
