--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#">Nisha-new-changes</a></li>
 
           <li><a href="#">About Us- Production </a></li>
-          <li><a href="#">Living Room</a></li>
+          <li><a href="#">Living Room-abc</a></li>
           <li><a href="#">Kitchen</a></li>
           <li><a href="#">Outdoors</a></li>
           <li><a href="#">Contact</a></li>
